--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.j256.simplelogging</groupId>
 	<artifactId>simplelogging</artifactId>
-	<version>1.1</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Simple Logging</name>
 	<url>https://256stuff.com/sources/simplelogging/</url>
@@ -34,7 +34,7 @@
 	<scm>
 		<url>https://github.com/j256/simplelogging</url>
 		<connection>scm:git:ssh://git@github.com/j256/simplelogging.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/j256/simplelogginc.git</developerConnection>
+		<developerConnection>scm:git:ssh://git@github.com/j256/simplelogging.git</developerConnection>
 	</scm>
 	<developers>
 		<developer>
