--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<commons-logging-version>1.1.1</commons-logging-version>
 		<slf4j-version>1.7.2</slf4j-version>
 		<android-version>4.1.1.4</android-version>
+		<logback.version>1.0.11</logback.version>
 		<!-- yes we know this is an issue but it is here for backwards compatibility -->
 		<log4j-version>1.2.17</log4j-version>
 		<log4j2-version>2.0-beta4</log4j2-version>
@@ -236,6 +237,12 @@
 	</build>
 	<dependencies>
 		<!-- provided dependencies for optional features -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
