--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,3 +28,6 @@ jobs:
       - run:
           name: Upload coverage report to CodeCov
           command: bash <(curl -s https://codecov.io/bash)
+      - run:
+          name: Upload check
+          command: curl -X POST -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/j256/simplelogging/check-runs -d '{"name":"name","head_sha":"head_sha"}'
