--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,5 @@ jobs:
           name: Upload check
           # command: curl -X POST -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/j256/simplelogging/check-runs -d '{"name":"name","head_sha":"head_sha"}'
           command: curl -X POST https://api.github.com/repos/j256/simplelogging/check-runs -d '{"name":"name","head_sha":"head_sha"}'
+          when: always
+ 
