--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,4 +32,13 @@ jobs:
           name: Upload check
           command: bash x.sh
           when: always
- 
+       - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit         
