--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.j256.testcheckpublisher</groupId>
+				<artifactId>test-check-publisher-maven-plugin</artifactId>
+				<version>0.3</version>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
