--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<android-version>4.1.1.4</android-version>
 		<logback.version>1.0.11</logback.version>
 		<aws-lambda-java-core-version>1.1.0</aws-lambda-java-core-version>
+		<maven-plugin-api-version>3.6.3</maven-plugin-api-version>
 		<!-- yes we know this is an issue but it is here for backwards compatibility -->
 		<log4j-version>1.2.17</log4j-version>
 		<log4j2-version>2.0-beta4</log4j2-version>
