--- a/pom.xml
+++ b/pom.xml
@@ -21,18 +21,19 @@
 		<version>7</version>
 	</parent>
 	<properties>
-		<!-- external test package versions -->
-		<easymock-version>3.4</easymock-version>
-		<junit-version>4.13.2</junit-version>
-		<commons-logging-version>1.1.1</commons-logging-version>
-		<slf4j-version>1.7.2</slf4j-version>
+		<!-- optionl dependencies -->
+		<commons-logging-version>1.2</commons-logging-version>
+		<slf4j-version>1.7.32</slf4j-version>
 		<android-version>4.1.1.4</android-version>
-		<logback.version>1.0.11</logback.version>
-		<aws-lambda-java-core-version>1.1.0</aws-lambda-java-core-version>
+		<logback.version>1.2.10</logback.version>
+		<aws-lambda-java-core-version>1.2.1</aws-lambda-java-core-version>
 		<maven-plugin-api-version>3.6.3</maven-plugin-api-version>
-		<!-- yes we know this is an issue but it is here for backwards compatibility -->
+		<!-- log4j version 1 is here for backwards compatibility -->
 		<log4j-version>1.2.17</log4j-version>
-		<log4j2-version>2.17.0</log4j2-version>
+		<log4j2-version>2.17.1</log4j2-version>
+		<!-- external test package versions -->
+		<easymock-version>3.6</easymock-version>
+		<junit-version>4.13.2</junit-version>
 	</properties>
 	<scm>
 		<url>https://github.com/j256/simplelogging</url>
