--- a/src/test/resources/simpleLoggingLocalLog.properties
+++ b/src/test/resources/simpleLoggingLocalLog.properties
@@ -13,3 +13,5 @@
 #
 com\.j256\.simplelogging.* = DEBUG
 com\.j256\.simplelogging\.LocalLogBackendTest = TRACE
+# larger than previous for tests
+com\.j256\.simplelogging\.LocalLogBackendTest = INFO
