--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
 		<maven-plugin-api-version>3.6.3</maven-plugin-api-version>
 		<!-- log4j version 1 is here for backwards compatibility -->
 		<log4j-version>1.2.17</log4j-version>
-		<log4j2-version>2.17.1</log4j2-version>
+		<!-- greater than 2.3.2 needs java 7+, this includes the 2.17.1 security fixes -->
+		<log4j2-version>2.3.2</log4j2-version>
 		<!-- external test package versions -->
 		<easymock-version>3.6</easymock-version>
 		<junit-version>4.13.2</junit-version>
