--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ jobs:
       - run:
           name: mvn package
           command: mvn package
-      - run_log4j1_tests:
-          name: mvn test log4j1
+      - run:
+          name: mvn -Dtest=Log4jLogBackendTest test
           command: mvn -Dtest=Log4jLogBackendTest test
       # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
       - store_test_results: 
