--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,9 @@
 		<logback.version>1.2.10</logback.version>
 		<aws-lambda-java-core-version>1.2.0</aws-lambda-java-core-version>
 		<maven-plugin-api-version>3.6.3</maven-plugin-api-version>
-		<!-- log4j version 1 is here for backwards compatibility testing -->
+		<!-- log4j version 1 is here for backwards compatibility testing only -->
 		<log4j-version>1.2.17</log4j-version>
-		<!-- greater than 2.3.2 needs java 7+, this includes the 2.17.1 security fixes -->
-		<log4j2-version>2.13.2</log4j2-version>
+		<log4j2-version>2.20.0</log4j2-version>
 		<!-- external test package versions -->
 		<easymock-version>3.6</easymock-version>
 		<junit-version>4.13.2</junit-version>
