--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ jobs:
           name: mvn package
           command: mvn package
       - run:
-          name: mvn -Dtest=Log4jLogBackendTest test
-          command: mvn -Dtest=Log4jLogBackendTest test
+          name: mvn -Ptestlog4jv1 -Dtest=Log4jLogBackendTest test
+          command: mvn -Ptestlog4jv1 -Dtest=Log4jLogBackendTest test
       # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
       - store_test_results: 
           path: target/surefire-reports
