--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -4,4 +4,4 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Print the date in ISO 8601 format
-log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} [%p] %c{1} %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} [%p] LOG4J %c{1} %m%n
