Improved test covereage slightly

--- a/src/test/resources/simplelogging.properties
+++ b/src/test/resources/simplelogging.properties
@@ -39,3 +39,10 @@ backend = LOCAL
 
 # increase the log level for the local log backend for the package pattern loggers
 locallog.com\.j256\.simplelogging\.LocalLogBackendTest = TRACE
+
+# set log level
+locallog.com\.j256\.simplelogging\.Initial = INFO
+# now increase the level for coverage
+locallog.com\.j256\.simplelogging\.Initial = TRACE
+# now decrease the level for coverage
+locallog.com\.j256\.simplelogging\.Initial = ERROR
